--- a/Task (18.07) Classwork/style/style.css
+++ b/Task (18.07) Classwork/style/style.css
@@ -1,23 +1,17 @@
-body{
-    background-color: gray;
-}
 
-.mainmenu {
-    background-color: coral;
-    color: white;
+/*.mainmenu {
+
 
     padding: 10px;
-    margin-top: 10px;
-    border: none;
-    
+    border: 1px solid rgba(0, 0, 0, 0.5);
 
 }
 
 
 .dropdown{
     position: relative;
-    display: inline-block;
-    
+    display: row;
+    margin: 0;
 }
 
 .dropdown-child {
@@ -34,4 +28,84 @@ body{
 
 .dropdown:hover .dropdown-child {
     display: block;
+}*/
+
+
+nav
+{
+    width:100%;
+    height:auto;
+}
+
+nav ul
+{
+    display:block;
+    width:80px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    list-style:none;
+    position:relative;
+
+    
+}
+
+nav ul li
+{
+    display:block; 
+    width:80px; 
+    height:40px; 
+    position:relative;
+    border: 0.1px solid black;
+}
+            
+nav ul li a
+{     
+    position:relative;
+    display:block;   
+    width: 80px;
+    height:40px;
+    box-sizing:border-box;
+    font-weight:bold;
+    color:black;
+    padding:10px 15px;
+    /*border-top:1px solid black;*/
+    text-decoration:none;
+}
+            
+nav ul  li:first-child a
+{
+    border:0px;
+}
+
+            
+nav ul li a:hover, nav ul li:hover a
+{           
+
+}
+            
+nav ul li ul
+{
+    position:absolute;
+    top:0px;
+    left:100%;
+    display:none;
+    width:auto;
+}
+            /*******показываем выпадашку при наведении ********/
+nav ul li:hover ul
+{
+    display:block;
+}
+                
+nav ul li ul li a
+{
+    white-space:nowrap;
+    text-transform:none;
+    /*padding:5px 20px;     */
+}
+                   
+nav ul li ul li a:hover
+{
+    
 }
