--- a/Task (21.07)/style/style.css
+++ b/Task (21.07)/style/style.css
@@ -1,11 +1,22 @@
-.table
+body
 {
     width: 100%;
     height: 1000px;
 
+
+
     background-color: gray;
     border: 3px solid black;
     padding: 10px;
+}
+
+.table
+{
+
+    position: absolute;
+    top: 30%;
+    left: 10%;
+
 }
 
 .card
@@ -20,9 +31,24 @@
     padding: 8.75px;
     border-radius: 7px;
     background-color: white;
+
+    transition: transform .1s ease-in-out;
 }
 
-.card_content
+
+.card:hover
+{
+    background-color: blue;
+
+
+
+    transform: translate3d(0px, -52.5px, 0px) rotateY(180deg);
+    box-shadow: 5px -5px 10px black;
+    /*transform: rotateY(180deg);*/
+    
+}
+
+.card_content_front
 {
     background: repeating-linear-gradient(-30deg, white, white 27px, darkred 27px, darkred 55px);
     width: 100%;
