--- a/Task (24.07)/style/style.css
+++ b/Task (24.07)/style/style.css
@@ -7,7 +7,7 @@ body
 {
     width: 100%;
     height: 110px;
-    background-color: blue;
+    background-color: rgb(72, 115, 255);
     display: inline-block;
 }
 
@@ -24,9 +24,9 @@ body
 .menu
 {
     
-    width: 50%;
+    width: 70%;
     
-    position: absolute;
+    position: relative;
     right: 5px;
     top: 5px;
     
@@ -37,24 +37,58 @@ body
 
 .item
 {
-
-    width: 30%;
-    display: inline-block;
+    position: absolute;
     
-    top: 0;
+    width: 100%;
+}
 
+.temp_menu
+{
+    display: inline-block;
+    position: relative;
+    top: 30px;
+    width: 32%;
+}
 
-    border: solid 3px gray;
+.item_name
+{
+    display: inline-block;
+    position: relative;
+    width: 100%;
+
+    border: solid 2px rgb(146, 142, 142);
+    font-size: 24px;
+    background-color: rgb(98, 125, 243);
+}
+
+.umbrella
+{
+    display: none;
+
+    margin-top: 2px;
+    margin-left: 3px;
+    margin-right: 3px;
+
+    position: relative;
 }
 
 .subitem
 {
-    border: solid 1px red;
+    border: solid 2px rgb(146, 142, 142);
+    background-color: rgb(98, 125, 243);
     display: none;
-    position: relative;
+    
+    
+    
+
 }
 
-.item:hover .subitem
+.temp_menu:hover .subitem
 {
     display: block;
+}
+
+.subitem:hover .umbrella
+{
+    display: inline-block;
 }
