--- a/Task (25.07) Classwork/style.css/style.css
+++ b/Task (25.07) Classwork/style.css/style.css
@@ -1,6 +1,5 @@
 html{
-    overflow: hidden;
-    zoom: 132%;
+    /*overflow: hidden;*/
 
 }
 
@@ -20,53 +19,58 @@ body{
 .sea
 {
     position: absolute;
-    top: 350px;
+    top: 466px;
     width: 100%;
     height: 100%;
     background-color: #266b97;
 
-    border-top: 7px solid #327dad;
-    
+    border-top: 11px solid #327dad;
+    box-sizing: border-box;
 }
 
 #cloud1
 {
     position: absolute;
-    height: 598px;
+    height: 794px;
+    margin-left: -122px;
 }
 
 #cloud2
 {
     position: absolute;
-    height: 598px;
+
+    height: 794px;
+    margin-left: -119px;
 }
 
 .horizon
 {
     position: absolute;
     width: 100%;
-    border: solid 1.5px #ddecfa;
-    top: -10px;
+    border: solid 2.2px #ddecfa;
+    top: -13px;
+    
 }
 
 #ship
 {
     position: absolute;
     
-    height: 40px;
+    height: 54px;
 
     z-index: 100;
-    top: 323px;
-    margin-left: 208px;
+    top: 431px;
+    margin-left: 153px;
 }
 
 
 #ice
 {
     position: absolute;
-    top: -2px;
+    top: 0px;
     z-index: 150;
-    height: 600px
+    height: 800px;
+    margin-left: -123.5px;
 }
 
 #text
@@ -75,27 +79,33 @@ body{
     padding: 0;
 
     position: absolute;
-    top:75px;
+    top:97px;
     
-    margin-left: 180px;
+    margin-left: 118px;
 
 
     font-family: 'Recursive', sans-serif;
-    font-size: 50px;
+    font-size: 70px;
     color:#fefefe;
     text-shadow: #9db4c9 2px 4px;
-    letter-spacing: 5.7px;
+    letter-spacing: 5px;
+
+    
 }
 
 #subtext
 {
     position: absolute;
-    font-size: 10px;
-    top: 129px;
-    margin-left: 260px;
-    letter-spacing: 0.4px;
+    font-size: 15px;
+    top: 170px;
+    margin-left: 220px;
+    letter-spacing: -0.8px;
     
     color: #77a4c6;
+
+
+
+    
 }
 
 .subscribe{
@@ -103,10 +113,9 @@ body{
     
 
     position: absolute;
-    top: 164px;
-    margin-left: 240px;
+    top: 217px;
+    margin-left: 195px;
 
-    
 }
 
 .email_row
@@ -115,18 +124,23 @@ body{
 
 
     background-color: #ffffff;
-    height: 26px;
-    width: 177px;
+    height: 38px;
+    width: 240px;
     
     box-shadow: inset 1px 2px 2px gray;
 
     border-radius: 3px;
-    padding: 7.5px 0px 0px 7px;
+    padding: 12px 0px 0px 12px;
     letter-spacing: 0.05px;
     
     
-    font-size: 10px;
+    font-size: 14px;
     box-sizing: border-box;
+    color: gray;
+
+
+
+
     
 }
 
@@ -137,10 +151,10 @@ button{
     font-family: 'Oswald', sans-serif;
     position: absolute;
     box-sizing: border-box;
-    height: 26px;
+    height: 37px;
     top: 0;
-    margin-left: 184px;
-    width: 70px;
+    margin-left: 250px;
+    width: 93px;
     background-color: #f8a528;
     
 
@@ -150,41 +164,48 @@ button{
     border-radius: 4px;
     color: white;
 
-    font-size: 10px;
+    font-size: 13px;
+    letter-spacing: 2px;
+
+
+
+
 }
 
 .datetime
 {
     position: absolute;
     box-sizing: border-box;
-    height: 52px;
-    width: 52px;
+    height: 70px;
+    width: 70px;
 
 
 
     background-color: #b9d6ef;
-    border-radius: 26px;
+    border-radius: 35px;
     z-index: 200;
 
     font-family: 'Recursive', sans-serif;
+    padding: 10px;
+    font-size: 20px;
 }
 
 #days
 {
-    top: 397px;
-    margin-left: 258px;
+    top: 529.8px;
+    margin-left: 220.5px;
 }
 
 #hours
 {
-    top: 397px;
-    margin-left: 342px;
+    top: 529.8px;
+    margin-left: 333px;
 }
 
 #mins
 {
-    top: 397px;
-    margin-left: 424px;
+    top: 529.8px;
+    margin-left: 443px;
 }
 
 h3{
@@ -200,18 +221,24 @@ h4{
 
 #days h4{
 
-    margin-left:2px;
-    letter-spacing: 2px;
+    margin-left:-6px;
+    letter-spacing: 1px;
+    font-size: 24px;
+    margin-top: 10px;
 }
 
 #hours h4{
 
-    margin-left:-6px;
-    letter-spacing: 3px;
+    margin-left:-17px;
+    font-size: 24px;
+    letter-spacing: 2px;
+    margin-top: 0px;
 }
 
 #mins h4{
 
-    margin-left:3px;
-    letter-spacing: 1px;
+    margin-left:-5px;
+    letter-spacing: -0.8px;
+    font-size: 24px;
+    margin-top: 0px;
 }
