--- a/Task (25.07) Classwork/style.css/style.css
+++ b/Task (25.07) Classwork/style.css/style.css
@@ -1,3 +1,16 @@
+@font-face 
+{
+    font-family: "Houschka Pro Medium"; /* Имя шрифта */
+    src: url(./fonts/HouschkaPro-Medium.otf); /* Путь к файлу со шрифтом */
+   }
+
+   @font-face 
+{
+    font-family: "Houschka Pro Bold"; /* Имя шрифта */
+    src: url(./fonts/HouschkaPro-Bold.otf); /* Путь к файлу со шрифтом */
+   }
+
+
 html{
     overflow: hidden;
 
@@ -56,11 +69,16 @@ body{
 {
     position: absolute;
     
-    height: 54px;
+    height: 22px;
 
     z-index: 100;
-    top: 431px;
-    margin-left: 153px;
+    top: 451px;
+    margin-left: 176px;
+
+
+    animation: 10s infinite linear;
+    animation-name: ship-move, ship-color;
+
 }
 
 
@@ -84,11 +102,11 @@ body{
     margin-left: 118px;
 
 
-    font-family: 'Recursive', sans-serif;
-    font-size: 70px;
+    font-family: "Houschka Pro Bold";
+    font-size: 71px;
     color:#fefefe;
     text-shadow: #9db4c9 2px 4px;
-    letter-spacing: 5px;
+    letter-spacing: 0.8px;
 
     
 }
@@ -98,10 +116,12 @@ body{
     position: absolute;
     font-size: 15px;
     top: 170px;
-    margin-left: 220px;
-    letter-spacing: -0.8px;
+    margin-left: 223px;
+    letter-spacing: -0.57px;
     
-    color: #77a4c6;
+    color: #266c979f;
+
+    font-family: "Houschka Pro Medium";
 
 
 
@@ -148,7 +168,7 @@ button{
 
     overflow: hidden;
 
-    font-family: 'Oswald', sans-serif;
+    font-family: "Houschka Pro Bold";
     position: absolute;
     box-sizing: border-box;
     height: 37px;
@@ -156,6 +176,7 @@ button{
     margin-left: 250px;
     width: 93px;
     background-color: #f8a528;
+    
     
 
     border: 1px solid gray;
@@ -165,8 +186,10 @@ button{
     color: white;
 
     font-size: 13px;
-    letter-spacing: 2px;
+    letter-spacing: 0.2px;
 
+    padding-top: 3px;
+    text-shadow: #85898d 0px 1.2px;
 
 
 
@@ -217,12 +240,13 @@ h3{
 
 h4{
     color: white;
+    font-family: "Houschka Pro Bold";
 }
 
 #days h4{
 
     margin-left:-6px;
-    letter-spacing: 1px;
+    letter-spacing: -0.6px;
     font-size: 24px;
     margin-top: 10px;
 }
@@ -231,14 +255,47 @@ h4{
 
     margin-left:-17px;
     font-size: 24px;
-    letter-spacing: 2px;
+    letter-spacing: 0.1px;
     margin-top: 0px;
 }
 
 #mins h4{
 
     margin-left:-5px;
-    letter-spacing: -0.8px;
+    letter-spacing: -0.3px;
     font-size: 24px;
     margin-top: 0px;
 }
+
+
+
+@keyframes ship-move {
+    0% 
+    {
+        transform: translateY(0px) rotateZ(0deg) translateX();
+    }
+    20% 
+    {
+        transform: translateY(-5px) rotateZ(5deg) translateX(5px);
+    }
+    40% 
+    {
+        transform: translateY(5px) rotateZ(0deg) translateX(0px);
+    }
+    60%
+    {
+        transform: translateY(-5px) rotateZ(-5deg) translateX(-5px);
+    }
+    80% 
+    {
+        transform: translateY(5px) rotateZ(5deg) translateX(5px);
+    }
+    100%
+    {
+        transform: translateY(0px) rotateZ(0deg) translateX();
+    }
+ 
+
+
+
+  }
