--- a/Task (25.07) Classwork/style.css/style.css
+++ b/Task (25.07) Classwork/style.css/style.css
@@ -150,11 +150,11 @@ body{
     box-shadow: inset 1px 2px 2px gray;
 
     border-radius: 3px;
-    padding: 12px 0px 0px 12px;
-    letter-spacing: 0.05px;
+    padding: 12.8px 0px 0px 12.5px;
+    letter-spacing: 0.25px;
     
-    
-    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
     box-sizing: border-box;
     color: gray;
 
@@ -233,14 +233,20 @@ button{
 
 h3{
     text-align: center;
-    margin-top: 15px;
+    margin-top: 13px;
 
     color: #266b97;
+    font-family: "Houschka Pro Medium";
 }
 
 h4{
+
+    position: absolute;
+    
     color: white;
     font-family: "Houschka Pro Bold";
+
+    margin-top: 3px;
 }
 
 #days h4{
@@ -248,7 +254,9 @@ h4{
     margin-left:-6px;
     letter-spacing: -0.6px;
     font-size: 24px;
-    margin-top: 10px;
+    margin-top: 3px;
+    
+
 }
 
 #hours h4{
@@ -256,7 +264,7 @@ h4{
     margin-left:-17px;
     font-size: 24px;
     letter-spacing: 0.1px;
-    margin-top: 0px;
+    margin-top: 3px;
 }
 
 #mins h4{
