--- a/Task (24.07)/style/style.css
+++ b/Task (24.07)/style/style.css
@@ -8,52 +8,39 @@ body
     width: 100%;
     height: 110px;
     background-color: rgb(72, 115, 255);
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .logo
 {
-    position: absolute;
-    top: 5px;
-    left: 5px;
+
+
+    margin: 5px 0px 0px 5px;
     width: 100px;
     height: 100px;
 }
 
-
 .menu
 {
+    margin: 40px 20px 0px 0px;
+    display: flex;
+    justify-content: flex-end;
     
-    width: auto;
-    
-    position: relative;
-    right: 5px;
-    top: 5px;
-    
-    display: block;
-
-    float: right;
-}
-
-.item
-{
-    position: absolute;
-    
-    width: auto;
 }
 
 .temp_menu
 {
-    display: inline-block;
-    position: relative;
-    top: 30px;
-    width: auto;
+
+    z-index: 100;
+
 }
+
 
 .item_name
 {
-    display: inline-block;
-    position: relative;
+
     width: auto;
 
     border: solid 2px rgb(146, 142, 142);
