--- a/Task (07.08)/style/style.css
+++ b/Task (07.08)/style/style.css
@@ -88,10 +88,10 @@ html
 }
 
 
-.time_set
+.time_to_start
 {
-    width: 48%;
-    height: 100%;
+    
+    
     
     border: 1px solid gray;
 
@@ -106,7 +106,7 @@ html
 .start_button
 {
     width: 48%;
-    height: 100%;
+    height: 96px;
 
     border: 1px solid gray;
 
@@ -137,7 +137,7 @@ html
     
     display: none;
 
-    /**/
+
 }
 
 .icon-spin3::before
