--- a/Task (08.08) Classwork/style/style.css
+++ b/Task (08.08) Classwork/style/style.css
@@ -13,6 +13,7 @@
 .circle
 {
 
+
     position: absolute;
 
     top: 237px;
@@ -22,23 +23,18 @@
     width: 50px;
     border: 5px solid black;
     border-radius: 50px;
-
     background-color: orange;
 
-
-    animation: jumping 10s ease infinite;
+    animation: jumping 10s cubic-bezier(.67,.67,.5,0.8) infinite;
+    /*animation-timing-function: cubic-bezier(.5, .5, .5, .5);*/
 }
 
 .stage
 {
     border: 3px solid black;
-
-    width: 100px;
-
     background-color: green;
 
-
-
+    width: 100px;
 }
 
 #stage1
@@ -73,11 +69,13 @@
     {
         top: 237px;
         left: 70px;
+        
+
     }
     6%
     {
         top: 170px;
-        left: 220px;
+        left: 200px;
     }
     12%
     {
@@ -87,7 +85,7 @@
     17%
     {
         top: 120px;
-        left: 450px;
+        left: 420px;
     }
     24%
     {
@@ -97,7 +95,7 @@
     29%
     {
         top: 70px;
-        left: 650px;
+        left: 620px;
     }
     35%
     {
@@ -107,7 +105,7 @@
     41%
     {
         top: 20px;
-        left: 850px;
+        left: 810px;
     }
     46%
     {
@@ -122,7 +120,7 @@
     58%
     {
         top: 170px;
-        left: 720px;
+        left: 760px;
     }
     63%
     {
@@ -132,7 +130,7 @@
     69%
     {
         top: 120px;
-        left: 530px;
+        left: 570px;
 
     }
     74%
@@ -143,7 +141,7 @@
     79%
     {
         top: 70px;
-        left: 300px;
+        left: 370px;
     }
     85%
     {
@@ -153,7 +151,7 @@
     90%
     {
         top: 20px;
-        left: 120px;
+        left: 190px;
     }
     95%
     {
@@ -179,7 +177,6 @@
 }
 @keyframes stage_transform2
 {
-
     0% {height: 150px;}
     47%{ height: 150px;}
     50%{ height: 250px;}
@@ -188,7 +185,6 @@
 }
 @keyframes stage_transform4
 {
-
     0% {height: 250px;}
     47%{ height: 250px;}
     50%{ height: 150px;}
@@ -197,7 +193,6 @@
 }
 @keyframes stage_transform5
 {
-
     0% {height: 300px;}
     46%{ height: 300px;}
     52%{ height: 100px;}
