--- a/Task (11.08) Classwork/style/style.css
+++ b/Task (11.08) Classwork/style/style.css
@@ -1,17 +1,45 @@
-.card:hover
+.clock
 {
+    background-image: url("../img/clock.png");
 
-    position: absolute;
+    width: 300px;
+    height: 300px;
 
-    transform: rotateY(180deg);
-    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+
+
+    position: relative;
 }
 
-.card
+.arrow
 {
-    position: absolute;
 
-    transform: rotateY(0deg);
-    transition: 0.5s;
+    width: 5px;
+    height: 150px;
+    background-color: red;
+
+    transform-origin: 100% 100%;
+    transform: rotate(45deg);
+
+    animation: rot 60s linear infinite;
 }
 
+@keyframes rot
+{
+    0%
+    {
+        transform-origin: 100% 100%;
+        transform: rotate(0deg);
+    }
+    50%
+    {
+        transform-origin: 100% 100%;
+        transform: rotate(180deg);
+    }
+    100%
+    {
+        transform-origin: 100% 100%;
+        transform: rotate(360deg);
+    }
+}
