--- a/Task (14.08)/style/style.css
+++ b/Task (14.08)/style/style.css
@@ -50,7 +50,7 @@ body
     background: rgba(255, 255, 255, 0.5);
     width: 30px;
     height: 100%;
-    left: 0;
+    left: 50%;
     top: 0;
     opacity: .5;
 
