--- a/Task (15.08) Classwork/style/style.css
+++ b/Task (15.08) Classwork/style/style.css
@@ -6,17 +6,58 @@ body
     overflow-x: hidden;
 }
 
+h3
+{
+    margin: 10px 20px 10px 10px;
+
+    font-family: Google Sans;
+    font-size: 14px;
+    line-height: 16px;
+    
+    color: #4F4F4F;
+}
+
 .header_top
 {
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
+
+    z-index: 2;
+
+}
+
+
+#custom_line
+{
+
+    position: absolute;
+
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 36px;
+    z-index: 1;
+    
+    
+}
+
+#login
+{
+    z-index: 3;
+}
+
+#feedback
+{
+    z-index: 3;
 }
 
 .header_bott
 {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    margin: 20px 0px 20px 0px;
 }
 
 .right_part
@@ -25,21 +66,17 @@ body
     justify-content: space-between;
 }
 
-.search
+.menu
 {
-    display: none;
+    width: 26px;
+    height: 19px;
 }
 
-.valute
-{
-    display: none;
-}
+.search{display: none;}
 
-.sort
-{
-    display: none;
+.valute{display: none;}
 
-}
+.sort{display: none;}
 
 
 .content img
@@ -47,9 +84,7 @@ body
     width: 355px;
 }
 
-#phone2{
-    display: none;
-}
+#phone2{display: none;}
 
 .content
 {
@@ -66,12 +101,7 @@ body
     justify-content: space-between;
 }
 
-.signs
-{
-    display: flex;
-
-
-}
+.signs{display: flex;}
 
 .chair
 {
@@ -93,7 +123,7 @@ body
 {
     .main
     {
-        overflow-x: auto;
+        overflow: auto;
         width: 355px;
     }
 }
